--- a/style.css
+++ b/style.css
@@ -30,12 +30,12 @@ body {margin: 0; font-family: 'Inter', sans-serif;}
 .top-nav {
     display: inline-flex;
     align-items: center;
-} #top-nav:hover {
-    text-decoration: underline;}
-#top-nav {
+} #top-nav {
     color: #545454;
     padding: 15px 15px;
-} #logo {
+} #top-nav:hover {
+    text-decoration: underline;}
+#logo {
     display: inline-flex;
     align-items: center;
 } #twitterbtn, #twitterbtn2{
@@ -44,9 +44,9 @@ body {margin: 0; font-family: 'Inter', sans-serif;}
     background-color: #4F98F0;
     color: #FFFFFF !important;
     border-radius: 4px;
-    padding: 0 15px;
+    padding: 15px 15px;
 } #twitterbtn img, #twitterbtn2 img {
-    padding: 15px 15px 15px 0;
+    padding-right: 10px;
 }
 #hamburger-menu {display: none;}
 
@@ -59,7 +59,7 @@ body {margin: 0; font-family: 'Inter', sans-serif;}
 } .main a {text-decoration: none;}
 .main-links {
     display: inline-flex;
-    align-content: center;
+    align-items: center;
     padding: 30px 0;
 } .main-links div:last-child {
     padding: 15px;
@@ -67,6 +67,9 @@ body {margin: 0; font-family: 'Inter', sans-serif;}
     display: inline-flex;
     align-items: center;
 } #learn-more {color: #387294;}
+#learn-more:hover {
+    text-decoration: underline;
+}
 .left-main h1 {font-size: 50px;}
 .left-main p {color: #545454;}
 
@@ -194,6 +197,7 @@ body {margin: 0; font-family: 'Inter', sans-serif;}
     color: #FFFFFF;
     font-weight: bold;
 } #trialbtn img {padding: 0 5px;}
+
 
 .footer {
     display: flex;
